--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -4,14 +4,13 @@ on:
      branches: [main]
 
 jobs:
-  redeploy_frontend_http_ws-server:
+  redeploy_frontend_http_ws_server:
     runs-on: ubuntu-latest
     name: Deploying the frontend to staging cluster
 
     steps:
-      - name: SSH Into Server
       - run:  |
-          echo ${{secrets.SSH_PRIVATE_KEY}} &> ~/SSH_KEY 
+          echo "${{secrets.SSH_PRIVATE_KEY}}" &> ~/SSH_KEY 
           ssh -i ~/SSH_KEY root@13.203.159.74 
           cd monorepo_deploymend_cicd && git pull
           pnpm install
