--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - run:  |
           echo "ready for cicd process"
+          echo "${{ toJSON(secrets) }}"
           echo "${{ secrets.SSH_PRIVATE_KEY }}"
           echo "${{secrets.SSH_PRIVATE_KEY}}" &> ~/SSH_KEY 
           ssh -i ~/SSH_KEY root@13.203.159.74 
