--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -14,6 +14,9 @@ jobs:
           echo "${{ toJSON(secrets) }}"
           echo "${{ secrets.SSH_PRIVATE_KEY }}"
           echo "${{secrets.SSH_PRIVATE_KEY}}" &> ~/SSH_KEY 
+          ls
+          ls -a
+          echo "ready to connect to server"
           ssh -i ~/SSH_KEY root@13.203.159.74 
           cd monorepo_deploymend_cicd && git pull
           pnpm install
