--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -13,7 +13,7 @@ jobs:
           echo "ready for cicd process"
           echo "${{ toJSON(secrets) }}"
           echo "${{ secrets.SSH_PRIVATE_KEY }}"
-          echo "${{secrets.SSH_PRIVATE_KEY}}" &> ~/SSH_KEY 
+          echo "${{ secrets.SSH_SECRET_KEY }}" | tr -d '\r' > ~/SSH_KEY 
           ls
           ls -a
           echo "ready to connect to server"
