--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -25,6 +25,10 @@ jobs:
           echo "ready to connect to server"
           ssh -i ~/SSH_KEY ubuntu@13.234.35.28 "
             cd monorepo_deploymend_cicd
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+            source ~/.bashrc
+            nvm install v23.10.0
+            nvm use v23.10.0
             sudo npm i -g pm2
             sudo npm i -g pnpm
             git pull
